--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
   />
   <title>JV industries React templete</title>
   <meta name="description" content="" />
-  <meta name="author" content="@Issaafalkattan" />
+  <meta name="author" content="@RUSHIKESHPAWAR" />
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
