--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     sizes="72x72"
     href="img/apple-touch-icon-72x72.png"
   />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-csiI5RTYJzQ/OrqL6niXbLZXpVZvJ+1Xueet5gN2I1TNU/gsPV8QQw6IRU6n4ByM" crossorigin="anonymous">
+
   <link
     rel="apple-touch-icon"
     sizes="114x114"
