--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+
+  <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
+  
+  
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
   <link
     rel="apple-touch-icon"
     sizes="72x72"
     href="img/apple-touch-icon-72x72.png"
   />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-csiI5RTYJzQ/OrqL6niXbLZXpVZvJ+1Xueet5gN2I1TNU/gsPV8QQw6IRU6n4ByM" crossorigin="anonymous">
 
   <link
     rel="apple-touch-icon"
