--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,14 @@
   <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
 
   <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-  
-  
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
 
   <link
     rel="apple-touch-icon"
@@ -56,5 +59,30 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
   <div id="root"></div>
   <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+
+  <script>
+    // Function to fetch JSON data and populate the gallery
+    async function loadGallery() {
+      try {
+        const response = await fetch("data.json");
+        const data = await response.json();
+        const galleryDiv = document.querySelector(".gallery");
+
+        data.images.forEach((image) => {
+          const imgElement = document.createElement("img");
+          imgElement.src = image.src;
+          imgElement.alt = "Gallery Image";
+          imgElement.addEventListener("click", () => {
+            window.open(image.formUrl, "_blank");
+          });
+          galleryDiv.appendChild(imgElement);
+        });
+      } catch (error) {
+        console.error("Error loading gallery:", error);
+      }
+    }
+
+    // Load the gallery on page load
+    window.onload = loadGallery;
+  </script>
 </body>
